# C-FFmpeg-MusicPlayer

./: .gitignore  CMakeLists.txt  README.md  README.txt  main.c
include/: audio_engine.h  file_manager.h  ui_manager.h
src/: audio_engine.c  file_manager.c  main.c  ui_manager.c
